--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="./manifest.json">
 </head>
 <body>
+<pre-loader></pre-loader>
 <app-element _title="Hello"></app-element>
 <script src="./vendor/webcomponents-loader.js"></script>
 </body>
