Routing using lit-element-router

--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Free Restaurant Catalogue for You">
     <title>Front-End Web Starter Pack</title>
     <link rel="manifest" href="./manifest.json">
+    <script src="./vendor/webcomponents-loader.js"></script>
 </head>
 <body>
 <pre-loader></pre-loader>
-<app-element _title="Hello"></app-element>
-<script src="./vendor/webcomponents-loader.js"></script>
+<app-route></app-route>
 </body>
 </html>
