Initial app bar

--- a/web/src/lib/components/Generic/PreLoader/style.scss
+++ b/web/src/lib/components/Generic/PreLoader/style.scss
@@ -5,7 +5,7 @@ div {
   opacity: 100%;
   top: 0;
   position: fixed;
-  background-color: #1d5880;
+  background-color: white;
   width: 0;
   height: 3px;
   transition: width 5s;
