--- a/web/src/lib/components/App/AppLink/style.scss
+++ b/web/src/lib/components/App/AppLink/style.scss
@@ -19,3 +19,15 @@
     text-align: center;
   }
 }
+
+:host([app-bar]) {
+  display: block;
+
+  a {
+    display: inline-block;
+    color: white;
+    width: 100%;
+    padding: 0.8em 1em;
+    text-decoration: none;
+  }
+}
