add toast dialog

--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -10,6 +10,7 @@
     <script src="./vendor/webcomponents-loader.js"></script>
 </head>
 <body>
+<toast-dialog></toast-dialog>
 <pre-loader></pre-loader>
 <app-route></app-route>
 <error-dialog></error-dialog>
