--- a/web/src/lib/components/Timeline/TimelinePage/style.scss
+++ b/web/src/lib/components/Timeline/TimelinePage/style.scss
@@ -11,6 +11,7 @@
   .wrapper {
     flex: 1;
     display: flex;
+    flex-direction: column;
     width: 100%;
     padding: 0 16px;
     max-width: 800px;
